    successful result.
  - The methods in Request and Result also uses simple java type when
    possible and not objects. To know if an optional parameter has been set
    there is a boolean isSet<parameter>() method.
  - Removed some unused import.

* XINS/Java Client Framework:
  - Removed some unused import.

* XINS/Java Common Library:
  - Removed some unused import.

* Generated specification documentation:
  - Added more possible elements for api_1_0.dtd, function_1_0.dtd and
    type_1_0.dtd.
  - Update DTD files as the declaration should be on one line.

* Generated build file:
  - The specdocs is regenerated if api.xml has changed.
  - The result code generated files are regenerated if any function
    specification has changed.
  - Added the 'help' target that prints a summary of the possible targets.
    This target is now the default target. This target also prints the
    possible APIs.
  - If you compile using 'xins -Ddeprecated=false [target]*' the deprecation
    warnings won't be printed.
  - Renamed the target war-api-<api> to war-<api>, specdocs-api-<api> to
    specdocs-<api> and jar-capi-<api> to jar-<api>.
  - Added a new clean-<api> target.

* Build and release process:
  - Keep the changes-<version>.txt when making a release.
  - All files are tranformed to the correct line feed before making the
    release.
    This bug has been in the latest release XINS 0.169.
  - The xins.bat files is now release with the correct line feed.
    This bug has been in since the release XINS 0.1.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.169:

* XINS/Java Server Framework:
  - Enabled the new call framework and removed the old call framework.
  - The _GetStatistics function now support the reset=true argument that
    resets the statistics just after getting them.

* Generated specification documentation:
  - Added DTD validation before any stylesheet transformation.